fixed input overflowing by using box-sizing

--- a/src/components/MainPopup.css
+++ b/src/components/MainPopup.css
@@ -1,6 +1,8 @@
 .main-content {
     text-align: left;
     height: 100%;
+    width: 100%;
+    position: relative;
     p {
         margin: 0;
     }
@@ -30,6 +32,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         margin-bottom: 1rem;
+        box-sizing: border-box;
     }
     .channels-and-buttons {
         display: flex;
@@ -37,9 +40,6 @@
         height: 100%;
         gap: 1rem;
         .main-buttons {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
             width: 50%;
             .new-button {
                 transition: all ease 0.2s;
